--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
 .container-fluid img{
     width: 20%;"
 }
+.women-jecket-img img{
+    width: 100%;
+}
+.women-container{
+    border: 0;
+}
+
+.last-left{
+    align-items: center;
+    justify-content: center;
+}
+#be{
+    color: orange;
+}
+.w-img{
+    border: 0;
+    
+}
+.card-footer, .card-footer-w{
+    border: 0;
+    background-color: white;
+}
+.last-left{
+    border: 0;
+    border-radius: 20px;
+
+}
+.footer-left{
+    border: 0;
+}
+.card-footer h2{
+    color: orange;
+}
